--- a/client/src/scss/01-base/_variables.scss
+++ b/client/src/scss/01-base/_variables.scss
@@ -22,7 +22,7 @@ $font-sizes: (
 );
 
 //Colors
-$primary-color: green;
+$primary-color: MediumSlateBlue;
 $secondary-color: #0074c4;
 $text-color: #272727;
 
